Fixed white space on the right

--- a/src/Components/ArrowBtn/ArrowBtn.scss
+++ b/src/Components/ArrowBtn/ArrowBtn.scss
@@ -53,6 +53,12 @@ $accent-color: #ffac12;
 
 // Responsive
 
+@media only screen and (min-width: 320px) {
+  .listings_button {
+    font-size: 18px;
+  }
+}
+
 @media only screen and (max-width: 768px) {
   .navbar-button {
     padding: 10px;
@@ -60,10 +66,9 @@ $accent-color: #ffac12;
     padding: 10px;
     text-align: left;
   }
-}
-
-@media only screen and (min-width: 320px) {
-  .listings_button {
-    font-size: 18px;
+  .paragraph__button {
+    margin-top: -10px;
+    font-size: 16px;
+    padding: 15px;
   }
 }
