--- a/src/Components/Heading/Heading.scss
+++ b/src/Components/Heading/Heading.scss
@@ -4,12 +4,12 @@
 }
 .heading__title {
   font-family: inter, sans-serif;
-  font-size: 30px;
+  font-size: 40px;
   letter-spacing: 1px;
   font-weight: bold;
   line-height: 30px;
-  margin-top: 10px;
-  margin-left: 27px;
+  margin-top: 20px;
+  margin-left: 14px;
 }
 
 .heading__title-white {
@@ -20,6 +20,24 @@
   text-align: center;
 }
 
-.full-width {
-  width: 1000px;
+@media only screen and (min-width: 768px) {
+  .heading__title {
+    margin-top: -10px;
+    font-size: 25px;
+    width: 200px;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .heading__title {
+    font-size: 25px;
+    width: 300px;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .heading__title {
+    font-size: 40px;
+    width: 500px;
+  }
 }
