--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -12,7 +12,7 @@ $text-color: #666666;
 
 @media only screen and (min-width: 425px) {
   .logo {
-    margin-left: -10px;
+    margin-left: 35px;
   }
 }
 
@@ -24,10 +24,10 @@ $text-color: #666666;
 
 @media only screen and (min-width: 1024px) {
   .logo {
-    margin-left: -32px;
+    margin-left: 35px;
   }
   .navbar-nav {
-    margin-right: -50px;
+    margin-right: 10px;
   }
 }
 
