--- a/src/Components/Paragraph/Paragraph.scss
+++ b/src/Components/Paragraph/Paragraph.scss
@@ -10,16 +10,8 @@ $text-color: #666666;
   height: 100%;
 }
 
-.paragraph__description_wrapper {
-  margin-top: 80px;
-}
 .paragraph__description {
   color: $text-color;
-  font-size: 18px;
-  padding: 10px;
-  margin-top: 10px;
-  line-height: 35px;
-  margin-right: 200px;
 }
 
 .flex-row-reverse {
@@ -29,7 +21,7 @@ $text-color: #666666;
 .paragraph__img-reverse {
   margin-top: -80px;
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .paragraph__description_wrapper_reverse {
@@ -40,17 +32,73 @@ $text-color: #666666;
 }
 
 @media only screen and (min-width: 320px) {
+  .paragraph__img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .paragraph__description {
+    width: 100%;
+  }
 }
 
-@media only screen and (min-width: 320px) {
+@media only screen and (max-width: 767px) {
   .paragraph__img {
     width: 100%;
     height: 100%;
   }
   .paragraph__description_wrapper {
-    margin-top: 20px;
+    margin-left: -100px;
+    margin-top: -200px;
   }
   .paragraph__description {
-    width: 100%;
+    width: 600px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .paragraph__img {
+    height: auto;
+  }
+  .paragraph__description_wrapper {
+    margin-left: -20px;
+    padding: 5px;
+  }
+  .paragraph__description {
+    margin-top: 10px;
+    line-height: 20px;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .paragraph__img {
+    height: auto;
+  }
+  .paragraph__description_wrapper {
+    margin-left: -30px;
+    padding: 5px;
+  }
+  .paragraph__description {
+    margin-top: 10px;
+    line-height: 30px;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .paragraph__description_wrapper {
+    margin-left: -30px;
+    padding: 5px;
+    margin-top: 80px;
+  }
+  .paragraph__description {
+    margin-top: 10px;
+    line-height: 30px;
+  }
+
+  .paragraph__description {
+    font-size: 18px;
+    padding: 10px;
+    line-height: 35px;
+    margin-right: 100px;
   }
 }
